force-app/main/default/objects/Account/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>