force-app/main/default/objects/Account/fields/ccSabbatic__CC_Category_id__c.field-meta.xml
<CustomField>
    <fullName>ccSabbatic__CC_Category_id__c</fullName>
    <description>Campo para almacenar el id de la categoria de Sabbatic</description>
    <externalId>true</externalId>
    <label>CC_Category_id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>