force-app/main/default/objects/Account/fields/CIF_NIF__c.field-meta.xml
<CustomField>
    <fullName>CIF_NIF__c</fullName>
    <description>Creamos este campo porque no podemos utilizar el de Sage por tema de licencias</description>
    <label>CIF/NIF</label>
    <length>18</length>
    <type>Text</type>
</CustomField>