force-app/main/default/objects/Account/fields/Emergency_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Number__c</fullName>
    <label>Emergency Number</label>
    <type>Phone</type>
</CustomField>