force-app/main/default/objects/Account/fields/Potencial_Certinia__c.field-meta.xml
<CustomField>
    <fullName>Potencial_Certinia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potencial Certinia</label>
    <type>Checkbox</type>
</CustomField>