force-app/main/default/objects/Account/fields/VAT_Registration_Number_Type__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number_Type__c</fullName>
    <label>VAT Registration Number Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>NIF</fullName>
            </value>
            <value>
                <fullName>NIE</fullName>
            </value>
            <value>
                <fullName>VAT Registration Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>