force-app/main/default/objects/Account/validationRules/CIFNIF_Type_is_mandatory_if_CIFNIF.validationRule-meta.xml
<ValidationRule>
    <fullName>CIFNIF_Type_is_mandatory_if_CIFNIF</fullName>
    <active>false</active>
    <description>CIF/NIF, Business Name and Billing Address are mandatory in the Account record to Close Won an Opportunity</description>
    <errorConditionFormula>NOT(ISBLANK( VAT_Registration_Number__c )) &amp;&amp;   ISPICKVAL(Registration_Number_Type__c, &apos;&apos;)</errorConditionFormula>
    <errorMessage>The &quot;CIF/NIF Type&quot; has to be defined</errorMessage>
</ValidationRule>