force-app/main/default/objects/Account/listViews/All_Person_Account.listView-meta.xml
<ListView>
    <fullName>All_Person_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Current_Position__pc</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Type_of_profile__pc</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>All Person Account</label>
</ListView>